--- a/calvin-klein.html
+++ b/calvin-klein.html
@@ -17,7 +17,7 @@
                     <li><a href="dior.html">Dior</a></li>
                     <li><a href="ysl.html">YSL</a></li>
                     <li><a href="john-paul-gaultier.html">John Paul Gaultier</a></li>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index-copy.html">Home</a></li>
                 </ul>
             </nav>
         </div>
@@ -41,9 +41,9 @@
                 <p>A fresh and clean unisex fragrance.</p>
             </div>
             <div class="product">
-                <a href="calvin-klein-deep-eden.html">
+                <a href="calvin-klein-be.html">
                     <img src="https://rustans.com/cdn/shop/products/calvin_klein_f-_0020_2514132-1.jpg?v=1611133820&width=800" alt="Calvin Klein Deep Eden" />
-                    <h4>Calvin Klein Deep Eden</h4>
+                    <h4>Calvin Klein CK be</h4>
                 </a>
                 <p>A fresh and floral fragrance inspired by nature.</p>
             </div>
