--- a/dior-fahrenheit.html
+++ b/dior-fahrenheit.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul>
                     <li><a href="dior.html">Dior Products</a></li>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index-copy.html">Home</a></li>
                 </ul>
             </nav>
         </div>
@@ -32,6 +32,12 @@
                 
             </div>
             <button class="buy-now-btn" onclick="alert('Buy Now clicked for Dior Fahrenheit')">Buy Now</button>
+            <div class="price-quantity-container" style="margin-bottom: 15px;">
+                <span id="price" style="font-weight: 600; font-size: 1.2rem;">Price: $55</span>
+                <div class="quantity-selector" style="display: inline-flex; align-items: center; margin-left: 20px; position: relative;">
+                    <input type="number" id="quantityInput" value="1" min="1" max="50" style="width: 60px; font-size: 1rem; padding: 5px; border: 2px solid #4CAF50; border-radius: 5px; text-align: center; color: black;" />
+                </div>
+            </div>
         </div>
     </section>
 
@@ -41,5 +47,56 @@
             <p>&copy; 2025 Perfume Store. All rights reserved.</p>
         </div>
     </footer>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const priceElement = document.getElementById('price');
+            const quantityInput = document.getElementById('quantityInput');
+
+            function updatePrice() {
+                let quantity = parseInt(quantityInput.value);
+                if (isNaN(quantity) || quantity < 1) {
+                    quantity = 1;
+                    quantityInput.value = quantity;
+                } else if (quantity > 50) {
+                    quantity = 50;
+                    quantityInput.value = quantity;
+                }
+                const totalPrice = 55 * quantity;
+                priceElement.textContent = 'Price: $' + totalPrice.toFixed(2);
+            }
+
+            // Event listener for quantity input
+            quantityInput.addEventListener('input', updatePrice);
+
+            // Initialize price on page load
+            updatePrice();
+        });
+    </script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const priceElement = document.getElementById('price');
+            const quantityInput = document.getElementById('quantityInput');
+
+            function updatePrice() {
+                let quantity = parseInt(quantityInput.value);
+                if (isNaN(quantity) || quantity < 1) {
+                    quantity = 1;
+                    quantityInput.value = quantity;
+                } else if (quantity > 50) {
+                    quantity = 50;
+                    quantityInput.value = quantity;
+                }
+                const totalPrice = 55 * quantity;
+                priceElement.textContent = 'Price: $' + totalPrice.toFixed(2);
+            }
+
+            // Event listener for quantity input
+            quantityInput.addEventListener('input', updatePrice);
+
+            // Initialize price on page load
+            updatePrice();
+        });
+    </script>
 </body>
 </html>
