--- a/versace.html
+++ b/versace.html
@@ -17,7 +17,7 @@
                     <li><a href="dior.html">Dior</a></li>
                     <li><a href="ysl.html">YSL</a></li>
                     <li><a href="john-paul-gaultier.html">John Paul Gaultier</a></li>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index-copy.html">Home</a></li>
                 </ul>
             </nav>
         </div>
