--- a/registration.html
+++ b/registration.html
@@ -150,7 +150,7 @@
   </style>
 </head>
 <body>
-  <form class="form" action="/register" method="POST">
+  <form class="form" action="registration.php" method="post">
     <div class="title">Register</div>
     <label>
       <input type="text" name="username" class="input" placeholder=" " required />
